(ocamllex
 (modules formula_lexer other_lexer emonitor_lexer))

(menhir
 (modules formula_parser))
 ;; debug (flags --explain --inspection --table --dump))

(library
 (name monitor_lib)
 (libraries core_kernel base zarith core_unix core_unix.filename_unix eio_main)
 ;; debug menhirLib
 (preprocess (pps ppx_jane)))