(ocamllex
 (modules formula_lexer other_lexer emonitor_lexer))

(menhir
 (modules formula_parser))
 ;; debug (flags --explain --inspection --table --dump))

(library
 (name monitor_lib)
 (libraries core_kernel base zarith eio_main core_unix.filename_unix)
 ;; debug menhirLib
 (preprocess (pps ppx_jane)))